# unified-posthoc-explanations-kgc

./: LICENSE  README.md  pyproject.toml
data/complex-training/: train_loss_complex_kelpie.pkl  train_loss_complex_retrained.pkl  valid_loss_complex_kelpie.pkl  valid_loss_complex_retrained.pkl
data/explainers-output/: len_fb15k237_complex_anyburl.pkl  len_fb15k237_complex_kelpie.pkl  rank_fb15k237_complex_anyburl.pkl  rank_fb15k237_complex_criage.pkl  rank_fb15k237_complex_data_poisoning.pkl  rank_fb15k237_complex_k1.pkl  rank_fb15k237_complex_kelpie.pkl
notebooks/: complex_training.ipynb  explanations_evaluation.ipynb
triples-to-explain/: triples_to_explain_anyburl_format.txt  triples_to_explain_kelpie_format.csv
