[project]
name = "unified-posthoc-explanations-kgc"
version = "0.1.0"
description = ""
authors = [
    { name = "aleable-sony", email = "alessandro.lonardi@sony.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"